# apps/docs/public/openapi-docs.yml
@@ -1879,6 +1879,127 @@ paths:
                 additionalProperties: false
         default:
           $ref: "#/components/responses/error"
+  /login:
+    post:
+      operationId: login
+      summary: User login
+      description: Performs user login. If there is no associated user in the
+        database, creates a user with an empty degree and empty graph.
+      tags:
+        - User
+      security: null
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                provider:
+                  type: string
+                providerId:
+                  type: string
+                  minLength: 1
+                email:
+                  type: string
+                  format: email
+              required:
+                - provider
+                - providerId
+                - email
+              additionalProperties: false
+      parameters: []
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  ok:
+                    type: boolean
+                    enum:
+                      - true
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                        format: uuid
+                      facebookId:
+                        type: string
+                      googleId:
+                        type: string
+                      githubId:
+                        type: string
+                      displayName:
+                        type: string
+                      username:
+                        type: string
+                      email:
+                        type: string
+                        format: email
+                      matriculationYear:
+                        type: number
+                      graduationYear:
+                        type: number
+                      graduationSemester:
+                        type: number
+                      modulesDone:
+                        type: array
+                        items:
+                          type: string
+                          pattern: ^[A-Z]{2,4}[0-9]{4}[A-Z]{0,5}[0-9]{0,2}$
+                      modulesDoing:
+                        type: array
+                        items:
+                          type: string
+                          pattern: ^[A-Z]{2,4}[0-9]{4}[A-Z]{0,5}[0-9]{0,2}$
+                      savedDegrees:
+                        type: array
+                        items:
+                          type: string
+                          format: uuid
+                      savedGraphs:
+                        type: array
+                        items:
+                          type: string
+                          format: uuid
+                      mainDegree:
+                        anyOf:
+                          - type: string
+                            format: uuid
+                          - type: string
+                      mainGraph:
+                        anyOf:
+                          - type: string
+                            format: uuid
+                          - type: string
+                    required:
+                      - id
+                      - facebookId
+                      - googleId
+                      - githubId
+                      - displayName
+                      - username
+                      - email
+                      - matriculationYear
+                      - graduationYear
+                      - graduationSemester
+                      - modulesDone
+                      - modulesDoing
+                      - savedDegrees
+                      - savedGraphs
+                      - mainDegree
+                      - mainGraph
+                    additionalProperties: false
+                required:
+                  - ok
+                  - data
+                additionalProperties: false
+        default:
+          $ref: "#/components/responses/error"
   /degree:
     post:
       operationId: degree/create
@@ -2822,127 +2943,6 @@ paths:
             type: string
             format: uuid
           description: null
-      responses:
-        "200":
-          description: Successful response
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  ok:
-                    type: boolean
-                    enum:
-                      - true
-                  data:
-                    type: object
-                    properties:
-                      id:
-                        type: string
-                        format: uuid
-                      facebookId:
-                        type: string
-                      googleId:
-                        type: string
-                      githubId:
-                        type: string
-                      displayName:
-                        type: string
-                      username:
-                        type: string
-                      email:
-                        type: string
-                        format: email
-                      matriculationYear:
-                        type: number
-                      graduationYear:
-                        type: number
-                      graduationSemester:
-                        type: number
-                      modulesDone:
-                        type: array
-                        items:
-                          type: string
-                          pattern: ^[A-Z]{2,4}[0-9]{4}[A-Z]{0,5}[0-9]{0,2}$
-                      modulesDoing:
-                        type: array
-                        items:
-                          type: string
-                          pattern: ^[A-Z]{2,4}[0-9]{4}[A-Z]{0,5}[0-9]{0,2}$
-                      savedDegrees:
-                        type: array
-                        items:
-                          type: string
-                          format: uuid
-                      savedGraphs:
-                        type: array
-                        items:
-                          type: string
-                          format: uuid
-                      mainDegree:
-                        anyOf:
-                          - type: string
-                            format: uuid
-                          - type: string
-                      mainGraph:
-                        anyOf:
-                          - type: string
-                            format: uuid
-                          - type: string
-                    required:
-                      - id
-                      - facebookId
-                      - googleId
-                      - githubId
-                      - displayName
-                      - username
-                      - email
-                      - matriculationYear
-                      - graduationYear
-                      - graduationSemester
-                      - modulesDone
-                      - modulesDoing
-                      - savedDegrees
-                      - savedGraphs
-                      - mainDegree
-                      - mainGraph
-                    additionalProperties: false
-                required:
-                  - ok
-                  - data
-                additionalProperties: false
-        default:
-          $ref: "#/components/responses/error"
-  /user/login:
-    post:
-      operationId: user/login
-      summary: User login
-      description: Performs user login. If there is no associated user in the
-        database, creates a user with an empty degree and empty graph.
-      tags:
-        - User
-      security: null
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                provider:
-                  type: string
-                providerId:
-                  type: string
-                  minLength: 1
-                email:
-                  type: string
-                  format: email
-              required:
-                - provider
-                - providerId
-                - email
-              additionalProperties: false
-      parameters: []
       responses:
         "200":
           description: Successful response
